parser/sysy_parser.go
// Code generated from sysyParser.g4 by ANTLR 4.13.1. DO NOT EDIT.

package parser // sysyParser
import (
	"fmt"
	"strconv"
	"sync"

	"github.com/antlr4-go/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type sysyParser struct {
	*antlr.BaseParser
}

var SysyParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func sysyparserParserInit() {
	staticData := &SysyParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'const'", "'void'", "", "'if'", "'else'", "'while'", "'break'",
		"'continue'", "'return'", "'('", "')'", "'['", "']'", "'{'", "'}'",
		"','", "';'", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'<'", "'>'",
		"'=='", "'!='", "'<='", "'>='", "'&&'", "'||'", "'!'",
	}
	staticData.SymbolicNames = []string{
		"", "Const", "Void", "Type", "If", "Else", "While", "Break", "Continue",
		"Return", "LeftParen", "RightParen", "LeftBracket", "RightBracket",
		"LeftBrace", "RightBrace", "Comma", "Semicolon", "Assign", "Add", "Sub",
		"Mul", "Div", "Mod", "Less", "Greater", "Equal", "NotEqual", "LessEqual",
		"GreaterEqual", "And", "Or", "Not", "Identifier", "IntegerConstant",
		"FloatConstant", "WS", "LineComment", "BlockComment", "Preprocessor",
	}
	staticData.RuleNames = []string{
		"comp", "compUnit", "decl", "constDecl", "constDef", "constinitVal",
		"varDecl", "varDef", "initVal", "funcDef", "funcType", "funcFParams",
		"funcFParam", "block", "blockItem", "stmt", "exp", "cond", "lVal", "primaryExp",
		"number", "unaryExp", "unaryOp", "funcRParams", "mulExp", "addExp",
		"relExp", "eqExp", "lAndExp", "lOrExp", "constExp",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// sysyParserInit initializes any static state used to implement sysyParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewsysyParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func SysyParserInit() {
	staticData := &SysyParserParserStaticData
	staticData.once.Do(sysyparserParserInit)
}

// NewsysyParser produces a new parser instance for the optional input antlr.TokenStream.
func NewsysyParser(input antlr.TokenStream) *sysyParser {
	SysyParserInit()
	this := new(sysyParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &SysyParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "sysyParser.g4"

	return this
}

// sysyParser tokens.
const (
	sysyParserEOF             = antlr.TokenEOF
	sysyParserConst           = 1
	sysyParserVoid            = 2
	sysyParserType            = 3
	sysyParserIf              = 4
	sysyParserElse            = 5
	sysyParserWhile           = 6
	sysyParserBreak           = 7
	sysyParserContinue        = 8
	sysyParserReturn          = 9
	sysyParserLeftParen       = 10
	sysyParserRightParen      = 11
	sysyParserLeftBracket     = 12
	sysyParserRightBracket    = 13
	sysyParserLeftBrace       = 14
	sysyParserRightBrace      = 15
	sysyParserComma           = 16
	sysyParserSemicolon       = 17
	sysyParserAssign          = 18
	sysyParserAdd             = 19
	sysyParserSub             = 20
	sysyParserMul             = 21
	sysyParserDiv             = 22
	sysyParserMod             = 23
	sysyParserLess            = 24
	sysyParserGreater         = 25
	sysyParserEqual           = 26
	sysyParserNotEqual        = 27
	sysyParserLessEqual       = 28
	sysyParserGreaterEqual    = 29
	sysyParserAnd             = 30
	sysyParserOr              = 31
	sysyParserNot             = 32
	sysyParserIdentifier      = 33
	sysyParserIntegerConstant = 34
	sysyParserFloatConstant   = 35
	sysyParserWS              = 36
	sysyParserLineComment     = 37
	sysyParserBlockComment    = 38
	sysyParserPreprocessor    = 39
)

// sysyParser rules.
const (
	sysyParserRULE_comp         = 0
	sysyParserRULE_compUnit     = 1
	sysyParserRULE_decl         = 2
	sysyParserRULE_constDecl    = 3
	sysyParserRULE_constDef     = 4
	sysyParserRULE_constinitVal = 5
	sysyParserRULE_varDecl      = 6
	sysyParserRULE_varDef       = 7
	sysyParserRULE_initVal      = 8
	sysyParserRULE_funcDef      = 9
	sysyParserRULE_funcType     = 10
	sysyParserRULE_funcFParams  = 11
	sysyParserRULE_funcFParam   = 12
	sysyParserRULE_block        = 13
	sysyParserRULE_blockItem    = 14
	sysyParserRULE_stmt         = 15
	sysyParserRULE_exp          = 16
	sysyParserRULE_cond         = 17
	sysyParserRULE_lVal         = 18
	sysyParserRULE_primaryExp   = 19
	sysyParserRULE_number       = 20
	sysyParserRULE_unaryExp     = 21
	sysyParserRULE_unaryOp      = 22
	sysyParserRULE_funcRParams  = 23
	sysyParserRULE_mulExp       = 24
	sysyParserRULE_addExp       = 25
	sysyParserRULE_relExp       = 26
	sysyParserRULE_eqExp        = 27
	sysyParserRULE_lAndExp      = 28
	sysyParserRULE_lOrExp       = 29
	sysyParserRULE_constExp     = 30
)

// ICompContext is an interface to support dynamic dispatch.
type ICompContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	EOF() antlr.TerminalNode
	AllCompUnit() []ICompUnitContext
	CompUnit(i int) ICompUnitContext

	// IsCompContext differentiates from other interfaces.
	IsCompContext()
}

type CompContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompContext() *CompContext {
	var p = new(CompContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_comp
	return p
}

func InitEmptyCompContext(p *CompContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_comp
}

func (*CompContext) IsCompContext() {}

func NewCompContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompContext {
	var p = new(CompContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_comp

	return p
}

func (s *CompContext) GetParser() antlr.Parser { return s.parser }

func (s *CompContext) EOF() antlr.TerminalNode {
	return s.GetToken(sysyParserEOF, 0)
}

func (s *CompContext) AllCompUnit() []ICompUnitContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(ICompUnitContext); ok {
			len++
		}
	}

	tst := make([]ICompUnitContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(ICompUnitContext); ok {
			tst[i] = t.(ICompUnitContext)
			i++
		}
	}

	return tst
}

func (s *CompContext) CompUnit(i int) ICompUnitContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ICompUnitContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(ICompUnitContext)
}

func (s *CompContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sysyParserVisitor:
		return t.VisitComp(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sysyParser) Comp() (localctx ICompContext) {
	localctx = NewCompContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, sysyParserRULE_comp)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(65)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&14) != 0 {
		{
			p.SetState(62)
			p.CompUnit()
		}

		p.SetState(67)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(68)
		p.Match(sysyParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// ICompUnitContext is an interface to support dynamic dispatch.
type ICompUnitContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Decl() IDeclContext
	FuncDef() IFuncDefContext

	// IsCompUnitContext differentiates from other interfaces.
	IsCompUnitContext()
}

type CompUnitContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyCompUnitContext() *CompUnitContext {
	var p = new(CompUnitContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_compUnit
	return p
}

func InitEmptyCompUnitContext(p *CompUnitContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_compUnit
}

func (*CompUnitContext) IsCompUnitContext() {}

func NewCompUnitContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *CompUnitContext {
	var p = new(CompUnitContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_compUnit

	return p
}

func (s *CompUnitContext) GetParser() antlr.Parser { return s.parser }

func (s *CompUnitContext) Decl() IDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IDeclContext)
}

func (s *CompUnitContext) FuncDef() IFuncDefContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncDefContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncDefContext)
}

func (s *CompUnitContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *CompUnitContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *CompUnitContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sysyParserVisitor:
		return t.VisitCompUnit(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sysyParser) CompUnit() (localctx ICompUnitContext) {
	localctx = NewCompUnitContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, sysyParserRULE_compUnit)
	p.SetState(72)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 1, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(70)
			p.Decl()
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(71)
			p.FuncDef()
		}

	case antlr.ATNInvalidAltNumber:
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IDeclContext is an interface to support dynamic dispatch.
type IDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	ConstDecl() IConstDeclContext
	VarDecl() IVarDeclContext

	// IsDeclContext differentiates from other interfaces.
	IsDeclContext()
}

type DeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyDeclContext() *DeclContext {
	var p = new(DeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_decl
	return p
}

func InitEmptyDeclContext(p *DeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_decl
}

func (*DeclContext) IsDeclContext() {}

func NewDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *DeclContext {
	var p = new(DeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_decl

	return p
}

func (s *DeclContext) GetParser() antlr.Parser { return s.parser }

func (s *DeclContext) ConstDecl() IConstDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstDeclContext)
}

func (s *DeclContext) VarDecl() IVarDeclContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarDeclContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarDeclContext)
}

func (s *DeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *DeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *DeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sysyParserVisitor:
		return t.VisitDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sysyParser) Decl() (localctx IDeclContext) {
	localctx = NewDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, sysyParserRULE_decl)
	p.SetState(76)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetTokenStream().LA(1) {
	case sysyParserConst:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(74)
			p.ConstDecl()
		}

	case sysyParserType:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(75)
			p.VarDecl()
		}

	default:
		p.SetError(antlr.NewNoViableAltException(p, nil, nil, nil, nil, nil))
		goto errorExit
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstDeclContext is an interface to support dynamic dispatch.
type IConstDeclContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Const() antlr.TerminalNode
	Type() antlr.TerminalNode
	AllConstDef() []IConstDefContext
	ConstDef(i int) IConstDefContext
	Semicolon() antlr.TerminalNode
	AllComma() []antlr.TerminalNode
	Comma(i int) antlr.TerminalNode

	// IsConstDeclContext differentiates from other interfaces.
	IsConstDeclContext()
}

type ConstDeclContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstDeclContext() *ConstDeclContext {
	var p = new(ConstDeclContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constDecl
	return p
}

func InitEmptyConstDeclContext(p *ConstDeclContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constDecl
}

func (*ConstDeclContext) IsConstDeclContext() {}

func NewConstDeclContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstDeclContext {
	var p = new(ConstDeclContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_constDecl

	return p
}

func (s *ConstDeclContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstDeclContext) Const() antlr.TerminalNode {
	return s.GetToken(sysyParserConst, 0)
}

func (s *ConstDeclContext) Type() antlr.TerminalNode {
	return s.GetToken(sysyParserType, 0)
}

func (s *ConstDeclContext) AllConstDef() []IConstDefContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstDefContext); ok {
			len++
		}
	}

	tst := make([]IConstDefContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstDefContext); ok {
			tst[i] = t.(IConstDefContext)
			i++
		}
	}

	return tst
}

func (s *ConstDeclContext) ConstDef(i int) IConstDefContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstDefContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstDefContext)
}

func (s *ConstDeclContext) Semicolon() antlr.TerminalNode {
	return s.GetToken(sysyParserSemicolon, 0)
}

func (s *ConstDeclContext) AllComma() []antlr.TerminalNode {
	return s.GetTokens(sysyParserComma)
}

func (s *ConstDeclContext) Comma(i int) antlr.TerminalNode {
	return s.GetToken(sysyParserComma, i)
}

func (s *ConstDeclContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstDeclContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConstDeclContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sysyParserVisitor:
		return t.VisitConstDecl(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sysyParser) ConstDecl() (localctx IConstDeclContext) {
	localctx = NewConstDeclContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 6, sysyParserRULE_constDecl)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(78)
		p.Match(sysyParserConst)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(79)
		p.Match(sysyParserType)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(80)
		p.ConstDef()
	}
	p.SetState(85)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == sysyParserComma {
		{
			p.SetState(81)
			p.Match(sysyParserComma)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(82)
			p.ConstDef()
		}

		p.SetState(87)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(88)
		p.Match(sysyParserSemicolon)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstDefContext is an interface to support dynamic dispatch.
type IConstDefContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Identifier() antlr.TerminalNode
	Assign() antlr.TerminalNode
	ConstinitVal() IConstinitValContext
	AllLeftBracket() []antlr.TerminalNode
	LeftBracket(i int) antlr.TerminalNode
	AllConstExp() []IConstExpContext
	ConstExp(i int) IConstExpContext
	AllRightBracket() []antlr.TerminalNode
	RightBracket(i int) antlr.TerminalNode

	// IsConstDefContext differentiates from other interfaces.
	IsConstDefContext()
}

type ConstDefContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstDefContext() *ConstDefContext {
	var p = new(ConstDefContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constDef
	return p
}

func InitEmptyConstDefContext(p *ConstDefContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constDef
}

func (*ConstDefContext) IsConstDefContext() {}

func NewConstDefContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstDefContext {
	var p = new(ConstDefContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_constDef

	return p
}

func (s *ConstDefContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstDefContext) Identifier() antlr.TerminalNode {
	return s.GetToken(sysyParserIdentifier, 0)
}

func (s *ConstDefContext) Assign() antlr.TerminalNode {
	return s.GetToken(sysyParserAssign, 0)
}

func (s *ConstDefContext) ConstinitVal() IConstinitValContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstinitValContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstinitValContext)
}

func (s *ConstDefContext) AllLeftBracket() []antlr.TerminalNode {
	return s.GetTokens(sysyParserLeftBracket)
}

func (s *ConstDefContext) LeftBracket(i int) antlr.TerminalNode {
	return s.GetToken(sysyParserLeftBracket, i)
}

func (s *ConstDefContext) AllConstExp() []IConstExpContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstExpContext); ok {
			len++
		}
	}

	tst := make([]IConstExpContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstExpContext); ok {
			tst[i] = t.(IConstExpContext)
			i++
		}
	}

	return tst
}

func (s *ConstDefContext) ConstExp(i int) IConstExpContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstExpContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstExpContext)
}

func (s *ConstDefContext) AllRightBracket() []antlr.TerminalNode {
	return s.GetTokens(sysyParserRightBracket)
}

func (s *ConstDefContext) RightBracket(i int) antlr.TerminalNode {
	return s.GetToken(sysyParserRightBracket, i)
}

func (s *ConstDefContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ConstDefContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ConstDefContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case sysyParserVisitor:
		return t.VisitConstDef(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *sysyParser) ConstDef() (localctx IConstDefContext) {
	localctx = NewConstDefContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 8, sysyParserRULE_constDef)
	var _la int

	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(90)
		p.Match(sysyParserIdentifier)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	p.SetState(97)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	for _la == sysyParserLeftBracket {
		{
			p.SetState(91)
			p.Match(sysyParserLeftBracket)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(92)
			p.ConstExp()
		}
		{
			p.SetState(93)
			p.Match(sysyParserRightBracket)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

		p.SetState(99)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_la = p.GetTokenStream().LA(1)
	}
	{
		p.SetState(100)
		p.Match(sysyParserAssign)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}
	{
		p.SetState(101)
		p.ConstinitVal()
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IConstinitValContext is an interface to support dynamic dispatch.
type IConstinitValContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllConstExp() []IConstExpContext
	ConstExp(i int) IConstExpContext
	LeftBrace() antlr.TerminalNode
	RightBrace() antlr.TerminalNode
	AllComma() []antlr.TerminalNode
	Comma(i int) antlr.TerminalNode

	// IsConstinitValContext differentiates from other interfaces.
	IsConstinitValContext()
}

type ConstinitValContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyConstinitValContext() *ConstinitValContext {
	var p = new(ConstinitValContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constinitVal
	return p
}

func InitEmptyConstinitValContext(p *ConstinitValContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = sysyParserRULE_constinitVal
}

func (*ConstinitValContext) IsConstinitValContext() {}

func NewConstinitValContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ConstinitValContext {
	var p = new(ConstinitValContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = sysyParserRULE_constinitVal

	return p
}

func (s *ConstinitValContext) GetParser() antlr.Parser { return s.parser }

func (s *ConstinitValContext) AllConstExp() []IConstExpContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IConstExpContext); ok {
			len++
		}
	}

	tst := make([]IConstExpContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IConstExpContext); ok {
			tst[i] = t.(IConstExpContext)
			i++
		}
	}

	return tst
}

func (s *ConstinitValContext) ConstExp(i int) IConstExpContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IConstExpContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IConstExpContext)
}

func (s *ConstinitValContext) LeftBrace() antlr.TerminalNode {
	return s.GetToken(sysyParserLeftBrace, 0)
}
